syntax = "proto3";

package proto;

import "common.proto";

option go_package = "proto/tabletpb";

message GetRequest {
    string key = 1;
    uint64 version = 2;
}

message GetResponse {
    Value v = 1;
    Error err = 2;
}

message SetRequest {
    string key = 1;
    Value value = 2;
    WriteOption opt = 3;
}

message SetResponse {
    Error err = 1;
}


service KV {
    rpc Get(GetRequest) returns (GetResponse) {}
    rpc Set(SetRequest) returns (SetResponse) {}
}